--- a/themes/H3-Theme/layouts/index.html
+++ b/themes/H3-Theme/layouts/index.html
@@ -81,7 +81,7 @@
                                             <h6>Jan 7</h6>
                                         </div>
                                         <div class="back">
-                                            <p>An hackathon is an event where participants work on quick solutions to problems. This event will have hackers working on various farmbot prototypes for the hydroponics system in H3.</p>
+                                            <p>A hackathon is an event where participants work on quick solutions to problems. This event will have hackers working on various farmbot prototypes for the hydroponics system in H3.</p>
                                         </div>
                                     </div>
                                 </a>
@@ -116,10 +116,10 @@
                                     <div class="flipper">
                                         <div class="front">
                                             <img class="card-image" src="img/dummy/Conference Room.jpeg" alt="">
-                                            <h4>General Room</h4>
+                                            <h4>Function Room</h4>
                                         </div>
                                         <div class="back">
-                                            <h4>General Room</h4>
+                                            <h4>Function Room</h4>
                                             <ul>
                                                 <li>30 square meters</li>
                                                 <li>25€ hourly rate</li>
