--- a/themes/H3-Theme/layouts/page/login.html
+++ b/themes/H3-Theme/layouts/page/login.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
     <div class="pad-top">
         <h1 class="title">{{ .Title }}</h1>
-        <div id="login-pane" class="content">
+        <div id="login-panex" class="content">
             <label>Email:</label> <input id="login-email" type="email" placeholder="Email"> <br>
             <label>Password:</label> <input id="login-password" type="password" placeholder="Password"> <br>
             <input class="btn btn-light my-2 my-sm-0" type="submit" role="button" onclick="login()">
