--- a/themes/H3-Theme/layouts/page/spaces.html
+++ b/themes/H3-Theme/layouts/page/spaces.html
@@ -16,7 +16,7 @@
             </div>
 
             <div class="center">
-                <a class="btn btn-light btn-large my-2 my-sm-0" href="../eventform" role="button">Apply Here</a>
+                <a class="btn btn-light btn-large my-2 my-sm-0" href="../eventform" role="button">Book Here</a>
             </div>
         </div>
     </div>
