--- a/themes/H3-Theme/layouts/page/events.html
+++ b/themes/H3-Theme/layouts/page/events.html
@@ -74,7 +74,7 @@
             {{ end }}
 
             <div class="center">
-                <a class="btn btn-light btn-large my-2 my-sm-0" href="../eventform">Book Now</a>
+                <a class="btn btn-light btn-large my-2 my-sm-0" href="../eventform">Book Here</a>
             </div>
         </div>
     </div>
