--- a/themes/H3-Theme/layouts/page/gallery.html
+++ b/themes/H3-Theme/layouts/page/gallery.html
@@ -1,47 +1,27 @@
 {{ define "main" }}
-    <div class="pad-top">
+    <div id="art-gallery" class="pad-top">
         <h1 class="title">{{ .Title }}</h1>
-        <div>
-            {{ .Content }}
 
-            <div id="carousel" class="carousel slide" data-ride="carousel">
+        {{ range .Params.pictures }}
+            <div class="gallery-grid">
 
-                <ol class="carousel-indicators">
-                    {{ range $index, $element := .Params.pictures }}
-                        {{ if eq $index 0 }}
-                            <li data-target="#carousel" data-slide-to="{{ $index }}" class="active"></li>
-                        {{ else }}
-                            <li data-target="#carousel" data-slide-to="{{ $index }}"></li>
-                        {{ end }}
-                    {{ end }}
-                </ol>
-
-                <div class="carousel-inner">
-                    {{ range $index, $element := .Params.pictures }}
-                        {{ if eq $index 0 }}
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="/img/art/{{ .filename }}"  alt="">
-                            </div>
-                        {{ else }}
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="/img/art/{{ .filename }}"  alt="">
-                            </div>
-                        {{ end }}
-                    {{ end }}
+                <div class="title-cell">
+                    <h3>{{ .artist }}</h3>
+                    <h4>{{ .name }}</h4>
+                    <h5>{{ .location }}</h5>
                 </div>
 
-              <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
+                <div class="art-cell">
+                    <img src="/img/art/{{ .filename }}"  alt="">
+                </div>
 
+                <div class="church-cell">
+                    {{ if (and (isset . "churchlocation")  (not (eq .churchlocation ""))) }}
+                        <img class="church-location-image" src="/img/art-locations/{{ .churchlocation }}"  alt="">
+                    {{ end }}
+                </div>
+                
             </div>
-        </div>
+        {{ end }}
     </div>
-
-
 {{end}}
