added new tabs/pages

--- a/public/scss/layout/login.scss
+++ b/public/scss/layout/login.scss
@@ -18,8 +18,8 @@
     right: 0;
     background-color: rgba(26, 26, 26, 0.9);
     color: _palette(bg);
-    padding: 20px;
-    padding-top: 0;
+    padding: 0px;
+    padding-bottom: 20px;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
 }
