updated events/spaces content

--- a/themes/H3-Theme/layouts/page/spaces.html
+++ b/themes/H3-Theme/layouts/page/spaces.html
@@ -6,7 +6,7 @@
 
                 <div class="fade-container row">
                     {{ range .Params.spaces }}
-                        <div class="shift-card fade-card col">
+                        <div class="shift-card fade-card col" style="min-width: 250px;">
                             <img class="card-image" src="{{ .image }}" alt="">
                             <h4>{{ .name }}</h4>
                         </div>
