--- a/themes/H3-Theme/layouts/page/events.html
+++ b/themes/H3-Theme/layouts/page/events.html
@@ -57,7 +57,7 @@
         <div class="content section">
             <h2>Upcoming Events</h2>
             {{ range .Params.events }}
-                <div class="block-grid shift-card">
+                <div class="block-grid shift-card-mild">
                     <div class="img-cell">
                         <img class="card-image" src="{{ .image }}" alt="">
                     </div>
