--- a/themes/H3-Theme/layouts/partials/footer.html
+++ b/themes/H3-Theme/layouts/partials/footer.html
@@ -3,19 +3,18 @@
     <div class="row">
 
         <div class="col">
-            <h4>Location</h4>
             <h5>H3 (Ex-Herion)</h5>
             <p>Campo SS. Cosma e Damiano, 624-625<br>
             Giudecca<br>
             30133 – Venice - Italy</p>
             <br>
+            <h5>Contact Us</h5>
+            <p>contacts@serendpt.net</p>
 
         </div>
         <div class="col">
             <div class="sdpt right">
-                <a href="https://serendpt.net/"><img src="{{ .Site.Params.baseURL }}/img/SerenDPT-Tavola-disegno-3.svg" alt=""></a>
-                <br>
-                <h5>Contact Us</h5>
+                <a href="https://new.serendpt.net/contatti"><img src="{{ .Site.Params.baseURL }}/img/SerenDPT-Tavola-disegno-3.svg" alt=""></a>
             </div>
         </div>
     </div>
