--- a/themes/H3-Theme/layouts/partials/scripts.html
+++ b/themes/H3-Theme/layouts/partials/scripts.html
@@ -1,5 +1,5 @@
 
-// Initialize Firebase
+<!-- Initialize Firebase -->
 <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
 <script>
     var config = {
