--- a/public/scss/base/page.scss
+++ b/public/scss/base/page.scss
@@ -95,6 +95,8 @@ ul {
     h2 {
         font-size: 24pt;
         text-align: center;
+        margin-bottom: 0;
+        padding-bottom: 0;
     }
 }
 
