--- a/public/scss/components/card.scss
+++ b/public/scss/components/card.scss
@@ -57,6 +57,13 @@
     }
 }
 
+.shift-card-mild {
+    transition: transform 0.4s ease-out;
+    &:hover {
+        transform: translate(0px, -15px);
+    }
+}
+
 
 
 
@@ -104,5 +111,81 @@
 	transform: rotateY(180deg);
     h4, p, ul, li {
         color: _palette(bg);
+    }
+}
+
+
+
+
+
+
+.overlay-container {
+    position: relative;
+    width: 50%;
+
+    &:hover .overlay {
+        height: 100%;
+    }
+
+    .background:hover {
+        filter: blur(3px);
+        transition: 0.6s;
+    }
+    .overlay:hover ~ .background {
+        filter: blur(3px);
+        transition: 0.6s;
+    }
+
+    .image {
+        display: block;
+        width: 100%;
+    }
+
+    .background {
+        z-index: 1;
+    }
+
+    .overlay {
+        z-index: 2;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: rgba(26, 26, 26, 0.9);
+        overflow: hidden;
+        width: 100%;
+        height: 0;
+        transition: .3s ease-in-out;
+    }
+
+    .text {
+        color: white;
+        font-size: 20px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        text-align: center;
+
+        width: 100%;
+
+        p {
+            color: white;
+            font-size: 14pt;
+            line-height: 20pt;
+            padding: 20px;
+        }
+    }
+
+}
+
+.card-group {
+    margin: 30px;
+}
+#section {
+    .my-card {
+        min-width: 200px;
     }
 }
