--- a/public/scss/layout/spaces.scss
+++ b/public/scss/layout/spaces.scss
@@ -2,6 +2,10 @@
     .shift-card {
         text-align: center;
     }
+    .my-card {
+         min-width: 250px;
+         max-width: 350px;
+    }
 }
 
 .event-row {
