--- a/themes/H3-Theme/layouts/index.html
+++ b/themes/H3-Theme/layouts/index.html
@@ -27,7 +27,7 @@
                     </div>
 
 
-                    <div class="section">
+                    <div id="events-section" class="section">
                         <h2>Upcoming Events</h2>
                         <div class="fade-container row card-group">
                             <div class="overlay-container fade-card my-card col shift-card-mild">
@@ -75,7 +75,7 @@
                         </div>
                     </div>
 
-                    <div class="section">
+                    <div id="spaces-section" class="section">
                         <h2>Spaces</h2>
                         <div class="fade-container row card-group">
                             <div class="overlay-container fade-card my-card col shift-card-mild">
