--- a/themes/H3-Theme/static/css/layout/spaces.css
+++ b/themes/H3-Theme/static/css/layout/spaces.css
@@ -1,1 +1,1 @@
-#spaces-page .shift-card{text-align:center}.event-row{color:green}.event-row img{width:100px;height:auto}
+#spaces-page .shift-card{text-align:center}#spaces-page .my-card{min-width:250px;max-width:350px}.event-row{color:green}.event-row img{width:100px;height:auto}
