--- a/themes/H3-Theme/static/scss/layout/home.scss
+++ b/themes/H3-Theme/static/scss/layout/home.scss
@@ -7,6 +7,18 @@
     .section {
         margin-top: 50px;
     }
+    #events-section {
+        h6 {
+            padding-bottom: 10px;
+        }
+    }
+    #spaces-section {
+        .background {
+            h4 {
+                padding-bottom: 10px;
+            }
+        }
+    }
 }
 
 
